src-ken&y/objects/Grid_Views_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config to control the different views on the grid.</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fieldset_name__c</fullName>
        <description>Name of the field set the view should point to get the list of fields to display.</description>
        <label>Fieldset name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Name__c</fullName>
        <description>Unique name of the Kendo grid.</description>
        <label>Grid Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to determine if the view should be displayed on the grid view dropdown list.</description>
        <label>Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Dropdown_Index__c</fullName>
        <description>Order in which the field should be listed on the dropdown list. The index 1 will be listed on top and index n will be listed at the bottom (Given n &gt; 1). Index 1 will always be the default view.</description>
        <inlineHelpText>Enter the position on the drop down list this view should be listed.</inlineHelpText>
        <label>View Dropdown Index</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_name__c</fullName>
        <description>Name of the view to be displayed on the (Grid view) drop down list on the grid.</description>
        <label>View name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Grid Views Config</label>
</CustomObject>